Resolve merge conflict with band filter comment
Former-commit-id: d28006f834a0d7d54ae4b35d2cf72310a725f12b [formerly 8126b00102e311fe1b8efa41713fc65dbba86ff0] [formerly 2408b246b1afb67024e68cb18876cba5b520178f [formerly 1e24604d2694140488ce40e863fe582322ec217c]]
Former-commit-id: 2b47f79910d3d71ebefd86e0e7fe6f8362930cf3 [formerly f2ac02230d593eaf90113075199a93d4adb7cfa3]
Former-commit-id: 56ff6230e91e2358b6513a2c1b22dd9b879f6898